[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/story_2.png" type="Texture" id=1]
[ext_resource path="res://assets/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://assets/story_1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player_certo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Script/story_letter.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 370.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 645.5, 135.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 642, 43.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 372.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44.5, 77 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Story1" type="Sprite" parent="."]
position = Vector2( 640, 361 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.5, 360.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 635.5, 125.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 639, 687.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1276, 362.5 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 491.5, 345 )
shape = SubResource( 5 )

[node name="Player_certo" parent="." instance=ExtResource( 4 )]
position = Vector2( 100, 612 )

[node name="FundoPreto" type="Sprite" parent="."]
visible = false
position = Vector2( 639.5, 360.5 )
scale = Vector2( 2.00469, 2.00833 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Story2" type="Sprite" parent="."]
visible = false
position = Vector2( 638, 357 )
scale = Vector2( 0.66875, 0.672222 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
